src/ros2_ws/log/build_2024-03-08_13-36-50/pixpubsub/stderr.log
  File "/src/ros2_ws/install/pixpubsub/lib/python3.8/site-packages/pixpubsub/testing_node.py", line 29
    match count:
          ^
SyntaxError: invalid syntax

